--- a/Op.2
+++ b/Op.2
@@ -12,7 +12,7 @@ from datetime import date
 
 expirydate = datetime.date(2021, 10, 10)
 #expirydate = datetime.date(2021, 10, 1)
-today=date.today(2021, 2, 9)
+today=date.today()
 def hero():
 
     def chalo():
