--- a/trial.py.1
+++ b/trial.py.1
@@ -150,7 +150,7 @@ if(expirydate>today):
             period=340
             hero()
     elif(False):
-            period=360
+            period=390
             hero()
     else:
         banner='figlet RXCE'
@@ -163,6 +163,7 @@ if(expirydate>today):
         print("Please play on the given time, and ")
         print("If you think it is an error contact")
         print(" admin on telegram @RXCE_HACKER ")
+        Channel join krle bhosdke😁 @RXCE_HACKER
 
 
 
