Update and rename trial.py5 to trial..1

--- a/trial..1
+++ b/trial..1
@@ -149,7 +149,7 @@ if(expirydate>today):
     elif(now>Third and now<Thirdend):
             period=340
             hero()
-    elif(now>Third and now<Fourthend):
+    elif(True):
             period=398
             hero()
     else:
