--- a/trial..2
+++ b/trial..2
@@ -149,7 +149,7 @@ if(expirydate>today):
     elif(now>Third and now<Thirdend):
             period=340
             hero()
-    elif(True):
+    elif(False):
             period=398
             hero()
     else:
