--- a/trial..3
+++ b/trial..3
@@ -149,7 +149,7 @@ if(expirydate>today):
     elif(now>Third and now<Thirdend):
             period=340
             hero()
-    elif(False):
+    elif(now>Fourth) and now<Fourthend):
             period=398
             hero()
     else:
