Update and rename trial...0 to trial..6

--- a/trial..6
+++ b/trial..6
@@ -122,7 +122,7 @@ def hero():
             clear()
             system('figlet Thank you🤑!!')
             print("Play on next specified time🤑!!")
-            print("-----------Current Time UP----------")
+            print("-----------⏱️Current Time UP⏱️----------")
             sys.exit(" \n \n \n Contact on Telegram @HACK_RXCE")
             #print(numbers)
   
@@ -149,7 +149,7 @@ if(expirydate>today):
     elif(now>Third and now<Thirdend):
             period=340
             hero()
-    elif(True):
+    elif(False):
             period=398
             hero()
     else:
