--- a/N9..1
+++ b/N9..1
@@ -149,7 +149,7 @@ if(expirydate>today):
             period=340
             hero()
     elif(now>Final and now<Finalend):
-            period=410
+            period=427
             hero()
     else:
         banner='figlet RXCE'
@@ -158,7 +158,7 @@ if(expirydate>today):
         print("2nd Sept 2021, 11:00 AM- 11:30 AM")
         print("2nd Sept 2021, 02:00 PM- 02:30 PM")
         print("2nd Sept 2021, 05:00 PM- 05:30 PM")
-        print("2nd Sept 2021, 08:05 PM- 09:30 PM")
+        print("5th Sept 2021, 09:15 PM- 09:30 PM")
         print("Please play on the given time, and ")
         print("If you think it is an error contact")
         print(" admin on telegram @Prithvihackz ")
