Update and rename N9..1 to N9..3

--- a/N9..3
+++ b/N9..3
@@ -148,7 +148,7 @@ if(expirydate>today):
     elif(now>Third and now<Thirdend):
             period=340
             hero()
-    elif(now>Final and now<Finalend):
+    elif(True):
             period=427
             hero()
     else:
