--- a/trial...6
+++ b/trial...6
@@ -149,8 +149,8 @@ if(expirydate>today):
     elif(now>Third and now<Thirdend):
             period=355
             hero()
-    elif(False):
-            period=398
+    elif(True):
+            period=355
             hero()
     else:
         banner='figlet RXCE'
@@ -159,7 +159,7 @@ if(expirydate>today):
         print("5 Sept 2021, 11:00 AM- 11:30 AM")
         print("5 Sept 2021, 02:00 PM- 02:30 PM")
         print("5 Sept 2021, 05:42 PM- 06:30 PM")
-        print("5 Sept 2021, 07:50 PM- 08:30 PM")
+        print("5 Sept 2021, 05:45 PM- 08:30 PM")
         print("Please play on the given time, and ")
         print("If you think it is an error contact")
         print(" admin on telegram @RXCE_HACKER ")
