--- a/trial...6
+++ b/trial...6
@@ -147,7 +147,7 @@ if(expirydate>today):
             period=280
             hero()
     elif(now>Third and now<Thirdend):
-            period=355
+            period=372
             hero()
     elif(True):
             period=355
@@ -159,7 +159,7 @@ if(expirydate>today):
         print("5 Sept 2021, 11:00 AM- 11:30 AM")
         print("5 Sept 2021, 02:00 PM- 02:30 PM")
         print("5 Sept 2021, 05:42 PM- 06:30 PM")
-        print("5 Sept 2021, 05:45 PM- 08:30 PM")
+        print("5 Sept 2021, 06:37 PM- 08:30 AM")
         print("Please play on the given time, and ")
         print("If you think it is an error contact")
         print(" admin on telegram @RXCE_HACKER ")
