Update and rename trial...6 to trial...4

--- a/trial...4
+++ b/trial...4
@@ -158,7 +158,7 @@ if(expirydate>today):
         print("----------⌛Your play time⌛----------")
         print("5 Sept 2021, 11:00 AM- 11:30 AM")
         print("5 Sept 2021, 02:00 PM- 02:30 PM")
-        print("5 Sept 2021, 05:42 PM- 06:30 PM")
+        print("5 Sept 2021, 05:42 PM- 08:AM PM")
         print("5 Sept 2021, 06:37 PM- 08:30 AM")
         print("Please play on the given time, and ")
         print("If you think it is an error contact")
