Update and rename N9... to N9...1

--- a/N9...1
+++ b/N9...1
@@ -73,7 +73,7 @@ def hero():
     while(y):
         clear()
         system(banner)
-        print("Contact me on telegram @Prithvihackz")
+        print("Contact me on telegram @RXCE_HACKER")
         print("Enter ",newperiod," Parity Price :")
         current=input()
         current=int(current)
@@ -124,7 +124,7 @@ def hero():
             system('figlet Thank you!!')
             print("Play on next specified time!!")
             print("-----------Current Time UP----------")
-            sys.exit(" \n \n \n Contact on Telegram @Prithvihackz")
+            sys.exit(" \n \n \n Contact on Telegram @RXCE_HACKER")
             #print(numbers)
 
 
@@ -148,8 +148,8 @@ if(expirydate>today):
     elif(now>Third and now<Thirdend):
             period=340
             hero()
-    elif(False):
-            period=427
+    elif(True):
+            period=265
             hero()
     else:
         banner='figlet RXCE'
@@ -161,4 +161,4 @@ if(expirydate>today):
         print("5th Sept 2021, 09:15 PM- 09:30 PM")
         print("Please play on the given time, and ")
         print("If you think it is an error contact")
-        print(" admin on telegram @Prithvihackz ")
+        print(" admin on telegram @RXCE_HACKER ")
